--- a/A2/latex/index.tex
+++ b/A2/latex/index.tex
@@ -7,4 +7,22 @@ Swaneet Kumar
 
 Ivan Morozov
 \end{DoxyAuthor}
-Protokoll – Und was wir gelernt haben\-: • Wir hatten bereits auf einem Mac mit X\-Code(einer I\-D\-E für die C Sprache) einen Tielder Aufgabe bearbeitet. Dort waren alle Funktionen enthalten, bis auf die beiden get\-\_\-sticks und put\-\_\-sticks sowie dem disp\-\_\-philo\-\_\-states. Bei der Bewältigung der Aufgabe haben wir uns öfters an dem vergegebenen Beispiel critsect02.\-c sowie an anderen Codebeispielen aus dem pub orientiert. Wir hatten auch Hinweise von der anderen Partnergruppe die fertig war erhalten. Wir haben uns an unserer Vorlage aus X\-Code orientiert und nach und nach Bestandteile unseres Codes auf der Open\-Suse-\/\-V\-M importiert und getestet. Wir haben zunächst die Initialisierung und den Lebenyzyklus der Threads/\-Philosophen sowie den Input\-Loop mit den Benutzerbefehlen eingefügt. Nachdem wir die Ausgabe der Philosophen(disp\-\_\-philo\-\_\-states) geschrieben hatten, haben wir uns an dem get\-\_\-sticks und put\-\_\-sticks rangesetzt und unter Verwendung der genannten Threadfunktionen eine funktionierende Simulation der Spesenden Philosophen erstellt. • Unser makefile enthält auch ein clean und all was den Vorgang des Compilens erleichtert. • Wir haben den gcc-\/\-Compiler im makefile auch den Befehl -\/std=c99 gegeben, damit wir Iterationsvariablen direkt im Kopf der For-\/\-Schleifen definieren können und diese daher lokal halten können. Das Default-\/\-Verhalten lässt diese (für uns als A\-I-\/ler angewohnte) Deklaration nicht zu. • Es ist nicht klug auf einem Mac mit X\-Code zu entwickeln, da viele Sachen auf der V\-M nicht mehr funktionierten. Nächstes mal, werden wir direkt auf open\-Suse in der V\-M schreiben und auf der V\-M schrittweise testend entwickeln. • Nicht nur haben wir viel über Threads und Synchronisierung in C verstanden, sondern auch über die Organisation einer größeren Gruppe – und dass größere Gruppe schwerer zu koordinieren sind und nicht unbedingt (für diesen Aufgabenkontext) einen Nutzen gebracht haben. • Wir haben auch festgestellt, dass das Git-\/\-Protokoll zumsammen mit Github sehr nützlich als Versionsmanagement für die Gruppenarbeit und die Verteilung war. • Dennoch heißt das nicht, dass jeder der einen Notepad++ hat, auch unbedingt Änderungen am Code machen und sie (auf Git\-Hub) pushen sollte. Ohne I\-D\-E Änderungen zu machen ruft viele Fehler hervor, die nicht vom Änderdernden sofort festgestellt werden können. Dies e müssen dann mühselig von Anderen behoben werden. „\-Don’t commit without an I\-D\-E.\-“ • Bezüglich Doxygen haben wir festgestellt, dass es ein comfortables und leistungsstarkes Tool zum automatischen Generieren von H\-T\-M\-L-\/\-Dokumentationen ist. • Doxygen unterstützt nur C Code, aber keine Präprozessor-\/\-Anweisungen. 
+
+
+Unsere Dateien sind „main.\-c“, „main.\-h“, „monitor.\-c“ und „\-Makefile“. In der \hyperlink{main_8h}{main.\-h} Datei stehen die Deklarationen und globalen (Präprozessor-\/\-Konstanten) drinnen. Die main.\-c Datei enthält das Hauptprogramm mit der Initialisierung der Philosophen, dem Lebenslauf der Philosophen(\hyperlink{main_8h_a0c8c51d90769a1116cdadde466de49fd}{eat()}, \hyperlink{main_8h_af9aa51f8b26299354cf18d7c43276fdb}{think()}... etc.) und dem Inputloop welches Benutzereingaben einliest und ausführt.
+
+Bei der Initialisierung werden die die Semaphoren, die Cond\-\_\-vars und die Defaultwerte für die Philosophen und das Mutex initialisiert. Danach werden nach und nach die Philosophen erzeugt. Sie erhalten einen Pointer auf ihre I\-D. Die I\-D wurde vorher beim Initialisieren in ein p\-\_\-ids\mbox{[}\mbox{]} rein geschrieben. Wir können nicht die Adresse der I\-D selber übergeben, da die Thread-\/erzeugung verspätet passiert und die Threads dann fehlerhafte Ids erhalten. 
+
+Nachdem die main-\/\-Prozedur in main.\-c die Threads erzeugt hat, geht sie in einen Input\-Loop und liest in einer endlosschleife Benutzereingaben ab und delegiert den Input an handle\-\_\-quit und handle\-\_\-command. Handle\-\_\-quit prüft ob die Eingabe „\-Q“ bzw. „q“ war. In diesem Fall schreibt sie zuerst den Q\-U\-I\-T-\/\-Befehl auf alle Threads(durch das Array) und befreit sie von früheren Benuzter-\/\-Blockierungen. Damit kann das Programm beendet werden, selbst wenn einige Philsophen vom Benutzter immernoch blockiert waren. Danach werden alle Threads signalisiert(falls sie H\-U\-N\-G\-R\-Y waren) und werden dazu befohlen zu joinen. Dies verhindert, dass Philosophen im H\-U\-N\-G\-R\-Y feststecken und gar nicht erst zum Beenden kommen können. Die Threads quitten aus ihren Endlosschleife(philo-\/\-Prozedur) und beenden mit pthread\-\_\-exit.
+
+Danach werden die Threads sowie die Synchronisationsobjekte gelöscht und das main-\/\-Programm beendet. Beim fehlerhaften Beenden wird der Benutzer über die Konsole benachrichtigt. Es werden im Normalfall aufgrund des Aufräumens keine Synchronisationsobjekte hinterlassen.
+
+Handle\-\_\-command prüft ob die Eingabe eine gültige Philosophen\-I\-D und ein gültiger Befehl ist und führt diesen aus. Beim Blockier-\/befehlt der Philosophe zum „\-B\-L\-O\-C\-K“ aufgefordert. Beim Befreien(„\-U\-N\-B\-L\-O\-C\-K“) wird ein sem\-\_\-post auf dem genannten Thread aufgerufen. Das sem\-\_\-post haben wir nicht im entsprechenden Philothread geschrieben, da es aufgrund seiner Blockierung sich selbst nicht befreien kann. Beim Proceed wird einfach der Befehl auf das Thread-\/\-Befehls-\/\-Array geschrieben und delegiert. Die Philsosophen-\/\-Thread-\/\-Prozedur speichert zunächst ihr engekommene Phislosophen\-I\-D damit sie über diesen Index auf die ihn relevanten Information im philo\-\_\-state\mbox{[}\mbox{]}, stick\-\_\-state\mbox{[}\mbox{]}, cond\mbox{[}\mbox{]}, semaphores\mbox{[}\mbox{]} und input\-\_\-commands\mbox{[}\mbox{]} zugreifen kann. Sie geht danach in eine Endlosschleife in dem sie Denken, Sticks-\/aufheben, Essen und Sticks-\/ablegen. Sollten sie ein Q\-U\-I\-T-\/\-Befehl erhalten haben, beenden sie die Schleife und den Thread(pthread\-\_\-exit). Die Think-\/ und Eat-\/\-Prozedur sind beides For-\/\-Schleifen mit den entsprechend durhc die Konstanten definierten Iterationenanzahl. Bei jeder Iteration auf einen angekommennen Proceed/\-Block-\/\-Befehl überprüft und entsprechend blockiert/übersprungen. Wir haben Prüfung(und Ausführung) der Blockierbefehle hier implementiert, damit der Phislosoph sofort während seiner Aktionen T\-H\-I\-N\-K und E\-A\-T blockiert werden kann. Diese Implementation heißt auch, dass der Philsosoph nicht im H\-U\-N\-G\-R\-Y durch einen Semaphor blockiert wird.
+
+In monitor.\-c stehen get\-\_\-sticks, put\-\_\-sticks und das disp\-\_\-philso\-\_\-states. Im get\-\_\-sticks wird, solange beide Sticks besetzt auf der eigenen cond\-\_\-var blockiert. Davor wechselt er noch in den H\-U\-N\-G\-R\-Y –\-State, da das T\-H\-I\-N\-K jetzt nich mehr zutrifft. Sobald beide Sticks gleichzeitig frei sind, reserviert er beide Sticks und wechselt in E\-A\-T. Bei beiden Zustandsänderungen wird disp\-\_\-philso\-\_\-states aufgerufen. Diese Prozedur ist durch einen cirtical-\/section gesichert, da sonst die Threads z.\-B. die Sticks im „\-U\-S\-E\-D“ hinterlassen könnten ohne selber im Zustand E\-A\-T zu sein. Oder es könnten die Sticks wieder besetzt sein, obwohl der Thread aus der While-\/\-Schleife kam und sie auch besetzten will. Solche Inkonsistenzen werden durch den Mutex verhindert.
+
+Das put\-\_\-sticks legt einfach beide Sticks zurück, setzten den Philsophen auf T\-H\-I\-N\-K und signalisiert die benachbarten Philosophen. Wir haben dies auch als einen critical-\/section, da sonst die Philsoophen beim Zurpüklegen unterbrochen werden und evtl. die benachbarten Philosophen nicht signalisieren oder nur einer der beiden Sticks-\/zurück gelegt wird.
+
+Außerdem ist es nicht sinnvoll Semaphoren hier zu verwenden, da Semaphoren nicht abhängig von einer cond\-\_\-var blockieren können. Wir wollen natürlich nicht den Philosophen wecken, wenn bereits nur einer beider Sticks frei ist. Daher ist ptherad\-\_\-cond\-\_\-wait und pthread\-\_\-cond\-\_\-signal korrekt. Macros erleichteren den Zugriff auf die benachbarten Philosophen und die relevanten Sticks in dieser Datei.
+
+Das disp\-\_\-philo\-\_\-states prüft zunächst auf benachbarte essende Philsophen, benachrichtigt in dem Fall und gibt alle Philsophen-\/\-States aus. In der \hyperlink{main_8h}{main.\-h} Datei stehen die Konstanten für die diversen Zustände, sowie Macros für den/das jeweils linke(n)/rechte(n) Phislophen/\-Stick und einige sonstige Konstanten wie die Anzahl der Philosophen(\-N\-P\-H\-I\-L\-O) und das A\-S\-C\-I\-I\-\_\-\-N\-U\-M\-\_\-\-O\-F\-F\-S\-E\-T. Außerdem werden hier den Prozeduren Doxygen-\/\-Kommentare angefügt.
